Fix piechart z-index

--- a/src/views/Visualizer/styles.scss
+++ b/src/views/Visualizer/styles.scss
@@ -325,7 +325,6 @@ $bg-visualizer: rgb(49, 64, 77);
   }
 
   .interactive-map__legends {
-    z-index: 0;
     margin-right: 2rem;
   }
 
